--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ html {
         margin-top: 1rem;
     }
 
+@media (max-width: 1440px) {
 .home-grid {
     margin: 1rem 10rem 1rem 10rem;
     display: grid;
@@ -94,6 +95,7 @@ html {
             border-top: 0.3rem var(--blue) solid;
             margin-top: 9rem;
         }
+}
 
 @media (max-width: 56.25rem) {
 .home-grid {
